bad/bin_op_lth_int_bool.example_compiler_output
ERROR
[1mbad/bin_op_lth_int_bool.lat:3:5: [1;31merror: [0;1moperator < is defined only for int values and string values, not `int` and `boolean`[m
	42 < true;
	   [1;32m^[m
